--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </header>
 <section class="hero">
     <video  loop="loop" autoplay="autoplay" muted>
-        <source src="video/video.mp4" type="video/mp4" />
+        <source src="images/video.mp4" type="video/mp4" />
     </video>
     <div class="content">
         <h2>TIM RETRO</h2>
